versioned_docs/version-0.4.0/publications.md
---
id: publications
title: "相关论文"
sidebar_label: "相关论文"
---

- Bai, H., Hu, C., He, X., Zhang, B., Wang, J., 2016. Crystal MD: Molecular Dynamic Simulation Software for Metal with BCC Structure, in: Chen, W., Yin, G., Zhao, G., Han, Q., Jing, W., Sun, G., Lu, Z. (Eds.), Big Data Technology and Applications. Springer Singapore, Singapore, pp. 247–258. https://doi.org/10.1007/978-981-10-0457-5_23
- Hu, C., Wang, X., Li, J., He, X., Li, S., Feng, Y., Yang, S., Bai, H., 2017b. Kernel optimization for short-range molecular dynamics. Computer Physics Communications 211, 31–40. https://doi.org/10.1016/j.cpc.2016.07.010
- Hu, C., Bai, H., He, X., Zhang, B., Nie, N., Wang, X., Ren, Y., 2017a. Crystal MD: The massively parallel molecular dynamics software for metal with BCC structure. Computer Physics Communications 211, 73–78. https://doi.org/10.1016/j.cpc.2016.07.011
- Wang, X., Li, J., Wang, J., He, X., Nie, N., 2016. Kernel Optimization on Short-Range Potentials Computations in Molecular Dynamics Simulations, in: Chen, W., Yin, G., Zhao, G., Han, Q., Jing, W., Sun, G., Lu, Z. (Eds.), Big Data Technology and Applications. Springer Singapore, Singapore, pp. 269–281. https://doi.org/10.1007/978-981-10-0457-5_25
- LI J, ZHANG K, WEI P, et.al. The Performance Test and Optimization of Crystal-MD Program on Tianhe-2[G]//HU C, YANG W, JIANG C, et.al. High-Performance Computing Applications in Numerical Simulation and Edge Computing. Singapore: Springer Singapore, 2019, 913: 152–163. https://doi.org/10.1007/978-981-32-9987-0_13
